# llmo3-final-project

./: linkedin-jobs.py  pyproject.toml  scraper.py  selenium-scraper.py  test-job-descriptions.py
data/: Linkedin-Jobs-AI Engineer.csv  Linkedin-Jobs-Data Scientist.csv  Linkedin-Jobs-Gen AI.csv  Linkedin-Jobs-LLM Engineer.csv  Linkedin-Jobs-NLP Engineer.csv  Linkedin-Jobs-Prompt Engineer.csv  final-job-list.csv  jd-descriptions.csv
